--- a/ProAcc/Views/Assessment/ReadinessReport.cshtml
+++ b/ProAcc/Views/Assessment/ReadinessReport.cshtml
@@ -52,12 +52,12 @@
 
 		</div>
 		
-			@*<div class="col-6">
+			<div class="col-6">
 				<a class="card-title" style="float: left;">Project Name :@Session["Project_Name"]</a>
 			</div>
 			<div class="col-6">
 				<a class="card-title " style="float: right;">Instance Name : @Session["Instance_Name"]</a>
-			</div>*@
+			</div>
 		
 		<a class="toast-title">Readiness Report</a>
 		<hr />
