--- a/ProAcc/Views/Home/Home.cshtml
+++ b/ProAcc/Views/Home/Home.cshtml
@@ -411,14 +411,14 @@ background-attachment:local, local, scroll, scroll;
 
 
         <div class="col-lg-12 card" style="margin-bottom:10px !important;">
-            @*<div class="row">
+            <div class="row">
                 <div class="col-6">
                     <a class="card-title" style="float: left;">Project Name :@Session["Project_Name"]</a>
                 </div>
                 <div class="col-6">
                     <a class="card-title " style="float: right;">Instance Name : @Session["Instance_Name"]</a>
                 </div>
-            </div>*@
+            </div>
             <div class="row " style="margin-top: 20px;">
                 <div class="col-md-6 col-xl-4">
                     <div class="card mb-3 widget-content bg-pink" style="background-color: #E91E63 !important;">
@@ -557,7 +557,7 @@ background-attachment:local, local, scroll, scroll;
                         <div class="widget-content-wrapper text-white">
                             <div class="widget-content-left">
                                 <div class="widget-heading">Pre-Conversion</div>
-                                <div class="widget-subheading"><span id="Pre_StatusId"></span></div>
+                                @*<div class="widget-subheading"><span id="Pre_StatusId"></span></div>*@
                             </div>
                             <div class="widget-content-right">
                                 <div class="widget-numbers text-white"><span id="PreId">0</span></div>
@@ -570,7 +570,7 @@ background-attachment:local, local, scroll, scroll;
                         <div class="widget-content-wrapper text-white">
                             <div class="widget-content-left">
                                 <div class="widget-heading">Conversion</div>
-                                <div class="widget-subheading"><span id="Con_StatusId"></span></div>
+                                @*<div class="widget-subheading"><span id="Con_StatusId"></span></div>*@
                             </div>
                             <div class="widget-content-right">
                                 <div class="widget-numbers text-white"><span id="ConId">46%</span></div>
@@ -583,7 +583,7 @@ background-attachment:local, local, scroll, scroll;
                         <div class="widget-content-wrapper text-white">
                             <div class="widget-content-left">
                                 <div class="widget-heading">Post-Conversion</div>
-                                <div class="widget-subheading"> <span id="Post_StatusId"></span></div>
+                                @*<div class="widget-subheading"> <span id="Post_StatusId"></span></div>*@
                             </div>
                             <div class="widget-content-right">
                                 <div class="widget-numbers text-white"><span id="PostId"></span></div>
@@ -634,8 +634,8 @@ background-attachment:local, local, scroll, scroll;
                 <div class="row">
 
                     <div class="col-lg-6 card text-center border">
+                        <br />
                         <a class="card-title">Assessment</a>
-
                         <canvas id="Chart_Assessment"></canvas>
                     </div>
 
