--- a/ProAcc/Views/Resource/ResourcePreConversion.cshtml
+++ b/ProAcc/Views/Resource/ResourcePreConversion.cshtml
@@ -95,7 +95,14 @@
         </div>
     </div>
 </div>
-
+<div class="row">
+    <div class="col-6">
+        <a class="card-title" style="float: left;">Project Name :@Session["Project_Name"]</a>
+    </div>
+    <div class="col-6">
+        <a class="card-title " style="float: right;">Instance Name :@Session["Instance_Name"]</a>
+    </div>
+</div>
 @{
     Html.RenderAction("ResourceAllocation", "Resource");
 }
