--- a/ProAcc/Views/User/Index.cshtml
+++ b/ProAcc/Views/User/Index.cshtml
@@ -18,7 +18,6 @@
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
-            <th>Created</th>
             <th>Email</th>
             <th>
                 @Html.DisplayNameFor(model => model.Phone)
@@ -27,6 +26,7 @@
                 @Html.DisplayNameFor(model => model.LoginId)
             </th>
             <th>Role</th>
+            <th>Created</th>
             <th>User Type</th>
             <th>Customer Name</th>
             <th>Status</th>
@@ -41,9 +41,6 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Cre_on)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.EMail)
             </td>
             <td>
@@ -55,6 +52,10 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.RoleMaster.RoleName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Cre_on)
+                @*<a class="txtG" value="@item.Cre_on">@item.Cre_on</a>*@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.User_Type.UserType)
@@ -78,7 +79,7 @@
             else
             {
                 <td>
-                <a class="txtG" value="@item.isActive">In Active</a>
+                    <a class="txtG" value="@item.isActive">In Active</a>
                 </td>
                 <td>
                     <a class="txtG" value="@item.isActive"></a>
@@ -87,11 +88,11 @@
 
 
             @*<td>
-                <div class="row">
-                    &nbsp;&nbsp;&nbsp;&nbsp;<a class="fa fa-edit" data-toggle="tooltip" data-placement="top" title="Edit!" href="@Url.Action("Edit", "User", new { id = item.UserId })"></a> &nbsp;&nbsp;
-                    &nbsp;<a href="#" class="userDelete fa fa-trash"></a><input type="hidden" value="@item.UserId" />
-                </div>
-            </td>*@
+            <div class="row">
+                &nbsp;&nbsp;&nbsp;&nbsp;<a class="fa fa-edit" data-toggle="tooltip" data-placement="top" title="Edit!" href="@Url.Action("Edit", "User", new { id = item.UserId })"></a> &nbsp;&nbsp;
+                &nbsp;<a href="#" class="userDelete fa fa-trash"></a><input type="hidden" value="@item.UserId" />
+            </div>
+        </td>*@
         </tr>
         }
     </tbody>
@@ -101,11 +102,11 @@
     $(document).ready(function () {
         $("#prt").hide();
         $("#tblUserTable").dataTable({
-           "order": [[2, 'desc']],
+           "order": [[6, 'desc']],
             //"ordering": false,
             "columnDefs": [
                 {
-                    "targets": [1],
+                    "targets": [5],
                     "visible": false
                 }
             ]
