--- a/ProAcc/Views/Home/Home.cshtml
+++ b/ProAcc/Views/Home/Home.cshtml
@@ -908,8 +908,11 @@ background-attachment:local, local, scroll, scroll;
                     text: "100%"
                 },
 
-				 plugins: {
-					labels: {
+                plugins: {
+                     //outlabels
+                     labels: {
+                        //arc: true,
+                         //stretch: 45,
                          render: 'value' + "%",
                         fontColor: '#000',
 						position: 'outside'
