--- a/ProAcc/Views/Resource/ResourceAllocationAll.cshtml
+++ b/ProAcc/Views/Resource/ResourceAllocationAll.cshtml
@@ -172,7 +172,7 @@
                 },
 
                 {
-                    label: 'Select Task', name: 'ActivityID', index: 'ActivityID', width: 70, sortable: false, align: 'left', editable: false, hidden: true,
+                    label: 'Select Task', name: 'ActivityID', index: 'ActivityID', width: 70, sortable: false, align: 'left', editable: true, hidden: true,
                     cellEdit: true, edittype: 'select', formatter: 'select',//Add Only
                     editoptions: {
                     dataUrl: "@Url.Action("MasterAdd","Resource")?Phase_ID="+PhaseID,
@@ -304,7 +304,7 @@
 
         $('#jqGrid').navGrid('#jqGridPager',
             // the buttons to appear on the toolbar of the grid
-            { edit: true, add: false, del: false, search: false, refresh: true, view: false, position: "left", cloneToTop: false },
+            { edit: false, add: true, del: false, search: false, refresh: true, view: false, position: "left", cloneToTop: false },
             // options for the Edit Dialog
             {
                 editCaption: "The Edit Dialog",
@@ -511,7 +511,6 @@
         var User = '@Session["UserType"]';
         var loginid = '@Session["loginid"]';
          var j = 0;
-         debugger;
          for (var i = 0; i < ids.length; i++) {
              var Status_Id = $('#jqGrid').jqGrid('getCell', ids[i], 'StatusId')
              if (Status_Id == 2) {
@@ -525,121 +524,7 @@
              }
 
          }
-         @*var UserType ="@Session["UserType"].ToString()"
-        if (UserType == 'Project Manager')
-        {
-            var WIP_Status=false;
-             for (var i = 0; i < ids.length; i++) {
-                 var Status_Id = $('#jqGrid').jqGrid('getCell', ids[i], 'StatusId')
-                 if (Status_Id==2) {
-                     WIP_Status = true;
-                 }
-                 if (Status_Id == 1||Status_Id == 3) {
-                     $('#jEditButton_' + ids[i]).hide();
-                 }
-                 else {
-                      $('#jEditButton_' + ids[i]).show();
-                 }
-
-            }
-            if (WIP_Status) {
-                for (var i = 0; i < ids.length; i++) {
-                    var Status_Id = $('#jqGrid').jqGrid('getCell', ids[i], 'StatusId')
-                     if (Status_Id == 4) {
-                     $('#jEditButton_' + ids[i]).hide();
-                 }
-                }
-            }
-
-             var Actual_St_hours = jQuery("#jqGrid").jqGrid('getColProp', 'Actual_St_hours');
-                Actual_St_hours.editable = false;
-             var Actual_St_Date = jQuery("#jqGrid").jqGrid('getColProp', 'Actual_St_Date');
-                 Actual_St_Date.editable = false;
-            var Actual_En_Date = jQuery("#jqGrid").jqGrid('getColProp', 'Actual_En_Date');
-            Actual_En_Date.editable = false;
-
-
-
-        }
-        else {
-            var EST_hours = jQuery("#jqGrid").jqGrid('getColProp', 'EST_hrs');
-                EST_hours.editable = false;
-             var Planed__St_Date = jQuery("#jqGrid").jqGrid('getColProp', 'Planed__St_Date');
-                 Planed__St_Date.editable = false;
-            var Planed__En_Date = jQuery("#jqGrid").jqGrid('getColProp', 'Planed__En_Date');
-                Planed__En_Date.editable = false;
-            //debugger;
-            for (var i = 0; i < ids.length; i++) {
-
-                var Status_Id = $('#jqGrid').jqGrid('getCell', ids[i], 'StatusId')
-                if (Status_Id == 1|| Status_Id == 2) {
-                    j = i;
-                    //break;
-                }
-                $('#jEditButton_' + ids[i]).hide();
-            }
-
-            var EditFlag = false;
-            //  debugger;
-            for (var k = 0; k < ids.length; k++) {
-                var Status_Id = $('#jqGrid').jqGrid('getCell', ids[k], 'StatusId')
-                if ((Status_Id == 5 || Status_Id == 2 ) && !EditFlag) {
-                    $('#jEditButton_' + ids[k]).show();
-                    EditFlag = true;
-                }
-                //else {
-                //    $('#jEditButton_' + ids[k]).hide();
-                //}
-            }
-
-             for (var i = 0; i < ids.length; i++) {
-                var Status_Id = $('#jqGrid').jqGrid('getCell', ids[i], 'StatusId')
-           if (Status_Id == 2) {
-              $('#jEditButton_' + ids[i]).show();
-               //for (var j = 0; j < ids.length; j++) {
-               //     Status_Id = $('#jqGrid').jqGrid('getCell', ids[i], 'StatusId')
-               //     if (j != i) {
-
-               //         if (Status_Id!=4) {
-               //             $('#jEditButton_' + ids[j]).hide();
-               //         }
-
-               //          }
-               //      }
-                }
-
-            }
-
-            if (User == 'Consultant' || User == 'Customer') {
-                for (var i = 0; i < ids.length; i++) {
-                    var User_ID = $('#jqGrid').jqGrid('getCell', ids[i], 'UserID')
-                    //var Status_Id = $('#jqGrid').jqGrid('getCell', ids[k], 'StatusId')
-                    if (User_ID != loginid) {
-                        $('#jEditButton_' + ids[i]).hide();
-                    }
-
-                }
-            }
-        }
-        var a = 0;
-        for (var i = 0; i < ids.length; i++) {
-            if ($('#jEditButton_' + ids[i]).is(":visible")) {a = a + 1;}
-        }
-        //debugger;
-        var status=false;
-        if (UserType != 'Project Manager') {
-            if (a == 0 &&status==false) {
-                 //Notiflix.Report.Info("ProAcc Info !", "You dont have any Task to Perform");
-                Notiflix.Notify.Info("You dont have any Task to Perform", { timeout: 2000 });
-                status = true;
-             }
-        }*@
-
     }
-
-
-
-
     function GetStatusDropDown() {
         var Parameters = {};
         $.ajax({
