--- a/ProAcc/Views/Assessment/FioriAppsReport.cshtml
+++ b/ProAcc/Views/Assessment/FioriAppsReport.cshtml
@@ -28,6 +28,9 @@
         /*width: 50%!important;*/
         overflow-x: scroll;
     }
+    .app-main__inner{
+        width:99%;
+    }
 </style>
 <div style="padding:1em;" class="col-md-12">
     <div class="row">
